@@ -1,5 +1,11 @@
-SUBDIRS=gst-libs gst sys ext examples tools ## testsuite
+if HAVE_GCONF
+GCONF_DIR=gconf
+else
+GCONF_DIR=
+endif
 
-DIST_SUBDIRS=gst-libs gst sys ext examples tools ## testsuite
+SUBDIRS=gst-libs gst sys ext examples tools $(GCONF_DIR) ## testsuite
+
+DIST_SUBDIRS=gst-libs gst sys ext examples tools gconf ## testsuite
 
 EXTRA_DIST=gst-plugins.spec depcomp AUTHORS COPYING README RELEASE ChangeLog autogen.sh
